--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -193,7 +193,7 @@
 		<filter-class>com.ycglj.manage.filter.MobileAssetIsLoginFilter</filter-class>
 		<init-param>
 			<param-name>loginStrings</param-name>
-			<param-value>/login.html;.js;.css;restrict.html;index.html;regist.html;/test;/userSetting.html</param-value>
+			<param-value>/login.html;.js;.css;restrict.html;index.html;regist.html;/test;/userSetting.html;/transact</param-value>
 		</init-param>
 		<init-param>
 			<param-name>includeStrings</param-name>
